<resources>
    <string name="app_name">GamePlay</string>
    <string name="image_background">Image Background</string>
    <string name="connecting">Conecte-se \ne organize suas \njogatinas</string>
    <string name="gammingText">Crie grupos para jogar seus games\nfavoritos com seus amigos</string>
    <string name="discord">Entrar Com Discord</string>
    <string name="icon_user">Icon User</string>
    <string name="hello">Olá,</string>
    <string name="caique">Caique</string>
    <string name="dayVictory">Hoje é dia de vitória</string>
    <string name="iconcardgame">iconCardGame</string>
    <string name="Ranked">Ranqueada</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_matches">Partidas agendadas</string>
    <string name="total_matches">Total 6</string>
    <string name="image_content_match">Image Content Match</string>
    <string name="legends">Lendários</string>
    <string name="ranked">Ranqueada</string>
    <string name="lol">League of Legends</string>
    <string name="icon">Icon Calendar</string>
    <string name="date_and_hour">Sex 18/06 às 21:00h</string>
    <string name="quantity_player">3</string>
    <string name="iconuser">iconUser</string>
    <string name="line">line</string>
    <string name="lef_arrow_icon">lef arrow icon</string>
    <string name="schedule">Agendar partida</string>
    <string name="category">Categoria</string>
    <string name="select_server">Selecione um servidor</string>
    <string name="splashscreen">SplashScreen</string>
</resources>