<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.MainActivity">

    <ImageView
        android:contentDescription="@string/image_background"
        android:id="@+id/backgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/image_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/connecting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rajdhani_bold"
        android:textColor="@color/heading"
        android:textSize="40sp"
        android:text="@string/connecting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backgroundImage"
        android:textAlignment="center"
        android:layout_marginTop="-25dp"
        />
    <TextView
        android:id="@+id/group_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/heading"
        android:text="@string/gammingText"
        app:layout_constraintTop_toBottomOf="@id/connecting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/initGameButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableLeft="@drawable/ic_discord"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_warning"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_customized"
        android:text="@string/discord"
        />
</androidx.constraintlayout.widget.ConstraintLayout>