<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.HelloPlayer">

    <ImageView
        android:id="@+id/iconUser"
        android:contentDescription="@string/icon_user"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button_customized"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/headerDimensions"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/addNewGame"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/button_customized"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/headerDimensions"
        android:layout_marginEnd="24dp"
        />

    <TextView
        android:id="@+id/textHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iconUser"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/headerDimensions"
        android:layout_marginStart="20dp"
        android:textColor="@color/heading"
        android:textSize="24sp"
        android:fontFamily="@font/rajdhanimedium"
        android:text="@string/hello"
        />
    <TextView
        android:id="@+id/textUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textHello"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/headerDimensions"
        android:layout_marginStart="8dp"
        android:textColor="@color/heading"
        android:textSize="24sp"
        android:fontFamily="@font/rajdhani_bold"
        android:text="@string/caique"/>
    <TextView
        android:id="@+id/victoryDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/iconUser"
        app:layout_constraintTop_toBottomOf="@id/textHello"
        android:layout_marginStart="20dp"
        android:text="@string/dayVictory"
        android:textColor="@color/heading"
        android:fontFamily="@font/rajdhanimedium"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/victoryDay"
        android:layout_marginTop="39dp"
        tools:listitem="@layout/cards" />

    <TextView
        android:id="@+id/ScheduledMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardList"
        android:layout_marginTop="16dp"
        android:textColor="@color/heading"
        android:textSize="18sp"
        android:fontFamily="@font/rajdhani_bold"
        android:layout_marginHorizontal="19dp"
        android:text="@string/schedule_matches"
        />
    <TextView
        android:id="@+id/totalMatches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardList"
        android:textColor="@color/heading"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="19dp"
        android:fontFamily="@font/inter_regular"
        android:textSize="13sp"
        android:text="@string/total_matches"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="19dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ScheduledMatches"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/card_list_matches"
        />

</androidx.constraintlayout.widget.ConstraintLayout>